CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4c
------------
* Yet more typo fixes
* Twopenny's armor shop added to Rigard shop street (The Observer)

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4b
------------
* Alchemy menu is sorted alphabetically
* Added a weak health potion. Can be bought from Patchwork
* A metric fuckton of typos and minor bugs fixed (thanks CalmKhaos!)
* Combat rewrite (not much of this is instantiated yet, just the basic framwork that makes it possible)
 - Damage types (more flexible basic attack). Damage hp/sp/lp
 - Delayed actions/casting time
 - Retargetting (fallen)
 - Ability cooldowns
 - Making parser usage easier!
 - Cancellable
 - Spell stack
* Actual effects of rewrite (so far):
 - Default attack replaced
 - Bash replaced. Now has a cancelling effect and a 3 turn cooldown
 - GrandSlam replaced. Now has a cancelling effect and a 5 turn cooldown
 - D/T/Q.Attack replaced, added cooldowns
 - Frenzy replaced, added casting time (cancellable) and a 5 turn cooldown

Version 0.4a2
-------------
* Fixed a bug where Layla would appear pregnant when actually Terry was. Weird, that.
* Increased the timespan when Layla could be encountered to 8-18.
* Fixed a Bull Tower bug that would cause the ending to loop, resulting in all kinds of weirdness.
* Increased the suspicion gain from moving about in Bull Tower, making it more difficult to get away clean. Perfect run should be 60 suspicion.
* Increased the lust gain from Corishev's whip.

Version 0.4a
------------
* The Bull Tower: Huge new dungeon, in the style of Krawitz quest. Written by The Observer.
 - Get at least 60 rel with Cveta at the Outlaws (need to meet with her dawn and dusk a few times to get past the initial barrier), then enter the Outlaw camp