@@ -9,6 +9,10 @@ Version 0.4c
 ------------
 * Yet more typo fixes
 * Twopenny's armor shop added to Rigard shop street (The Observer)
+* Continuation on the combat rewrite:
+ - Pierce replaced
+ - Dirty blow replaced
+ - Cooldowns on Bash/Grand slam reduced
 
 --------------------------------------------
              PREVIOUS VERSIONS
